<resources>
    <string name="app_name">MultiTool</string>
    <string name="textWellcome">"Welcome, please select a tool: "</string>
    <string name="textConversor">Temp Converter</string>
    <string name="textCalcIMC">BMI Calculator</string>
    <string name="textAreaCalculator">Area Calculator</string>
    <string name="buttonDescription">Button</string>

    <string name="calculatorActivity">BMICalculator</string>
    <string name="lbl_height">"Height: "</string>
    <string name="lbl_weight">"Weight: "</string>
    <string name="hintKg" translatable="false">Kg</string>
    <string name="hintCm" translatable="false">cm</string>
    <string name="btn_calculate">Calculate</string>
    <string name="lbl_result">"BMI: "</string>
    <string name="lbl_analysis">"This indicates "</string>

    <!-- String for IMC Calculator -->
    <string name="lowWeight" translatable="false">Peso insuficiente</string>
    <string name="normalWeight" translatable="false">Normopeso</string>
    <string name="upWeight1" translatable="false">Sobrepeso grado I</string>
    <string name="upWeight2" translatable="false">Sobrepeso grado II</string>
    <string name="overWeight1" translatable="false">Obesidad grado I</string>
    <string name="overWeight2" translatable="false">Obesidad grado II</string>
    <string name="overWeight3" translatable="false">Obesidad grado III</string>
    <string name="overWeight4" translatable="false">Obesidad grado IV</string>

    <!-- String for Temperature Conversor-->
    <string name="lblInitTemp">"Init temperature: "</string>
    <string name="lblFinalTemp">"Final temperature: "</string>
    <string name="lblConvertTemp">"Choose unit to convert to: "</string>
    <string name="Celcius" translatable="false">Celsius</string>
    <string name="Fahrenheit" translatable="false">Fahrenheit</string>
    <string name="Kelvin" translatable="false">Kelvin</string>
    <string name="btn_convertir">Convert</string>

    <!-- String for Area Calculator -->
    <string name="lblGeometricForm">"Choose the geometric form: "</string>
    <string name="circle">Circle</string>
    <string name="lblCircleRadio">"Insert radio: "</string>
    <string name="rectangle">Rectangle</string>
    <string name="hintRectangle">(in cm)</string>
    <string name="lblBase">"Insert base: "</string>
    <string name="lblHeight">"Insert height: "</string>
    <string name="triangle">Triangle</string>
    <string name="hintTriangle">(in cm)</string>
    <string name="lblTriangleSide1">"Insert Side 1: "</string>
    <string name="lblTriangleSide2">"Insert Side 2: "</string>
    <string name="lblTriangleSide3">"Insert Side 3: "</string>
    <string name="lblMeasure">"Select what do you want calculate: "</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="result">"The result is: "</string>


    <!-- Strings for Zodiapp -->
    <string name="lblTitle">ZodiApp</string>
    <string name="zodiacNameAries">Aries</string>
    <string name="zodiacDateAries">21 March - 20 April</string>
    <string name="zodiacNameTaurus">Taurus</string>
    <string name="zodiacDateTaurus">21 April - 21 May</string>
    <string name="zodiacNameGemini">Gemini</string>
    <string name="zodiacDateGemini">22 May - 21 June</string>
    <string name="zodiacNameCancer">Cancer</string>
    <string name="zodiacDateCancer">22 June - 23 July</string>
    <string name="zodiacNameLeo">Leo</string>
    <string name="zodiacDateLeo">From 24 July - 23 August</string>
    <string name="zodiacNameVirgo">Virgo</string>
    <string name="zodiacDateVirgo">24 August - 23 September</string>
    <string name="zodiacNameLibra">Libra</string>
    <string name="zodiacDateLibra">23 September - 23 October</string>
    <string name="zodiacNameScorpio">Scorpio</string>
    <string name="zodiacDateScorpio">23 October - November</string>
    <string name="zodiacNameSagittarius">Sagittarius</string>
    <string name="zodiacDateSagittarius">23 November to 21 December</string>
    <string name="zodiacNameCapricorn">Capricorn</string>
    <string name="zodiacDateCapricorn">22 December - 20 January</string>
    <string name="zodiacNameAquarius">Aquarius</string>
    <string name="zodiacDateAquarius">21 January - 19 February</string>
    <string name="zodiacNamePisces">Pisces</string>
    <string name="zodiacDatePisces">20 February - 20 March</string>
    <string name="zodiacLuckToday">Today\'s horoscope: </string>
    <string name="zodiacImageDescription">Aries</string>
    <string name="zodiacFavoriteDescription">Favorite</string>

    <string name="toastAbout">Created by LeoDev </string>
    <string name="lblRectangle">"Insert Base: "</string>

    <string name="menu_prev" translatable="false">""</string>
    <string name="menu_next" translatable="false">""</string>
    <string name="menu_search">Search</string>

    <string name="alert_error_title">Error</string>
    <string name="alert_error_connection">There was an error trying to connect to the service</string>
    <string name="alert_ok">OK</string>


    <string name="empty_superheroes_title">No Superheroes to show</string>
    <string name="empty_superheroes_advice">Press the magnifying glass to search for a Superhero</string>

    <!-- To Do App -->
    <string name="todoAppButton">ToDo App</string>
    <string name="new_task">New Task</string>
    <string name="new_task_Text_View">New Task:</string>
    <string name="new_task_name">New Task Name</string>
    <string name="category_Text_View">Category:</string>
    <string name="category_EditText_View">Category</string>
    <string name="save_new_task">Save</string>
    <string name="todo_list_title" translatable="false">ToDo List</string>
    <string name="done_column_TextView">Done?:</string>
    <string name="category_date_column_TextView">Category/Date</string>
    <string name="task_column_TextView">Task</string>
    <string name="add_new_category_EditText">Add new category</string>


</resources>